feat(tokens): add new elevation tokens and deprecate others
- New tokens: level1, level2, level3, level3-reverse, level4
- Deprecated tokens: action, action-active, raised, raised-reverse, overlay

--- a/packages/orbit-design-tokens/output/tokens.css
+++ b/packages/orbit-design-tokens/output/tokens.css
@@ -719,18 +719,23 @@
   --elevation-flat-border-size: 1;
   --elevation-action-background: rgb(255, 255, 255);
   --elevation-action-box-shadow: rgb(37, 42, 49);
+  --elevation-level-1-box-shadow: rgb(37, 42, 49);
   --elevation-action-active-background: rgb(255, 255, 255);
   --elevation-action-active-box-shadow: rgb(37, 42, 49);
+  --elevation-level-2-box-shadow: rgb(37, 42, 49);
   --elevation-fixed-background: rgb(255, 255, 255);
   --elevation-fixed-box-shadow: rgb(37, 42, 49);
   --elevation-fixed-reverse-background: rgb(255, 255, 255);
   --elevation-fixed-reverse-box-shadow: rgb(37, 42, 49);
   --elevation-raised-background: rgb(255, 255, 255);
   --elevation-raised-box-shadow: rgb(37, 42, 49);
+  --elevation-level-3-box-shadow: rgb(37, 42, 49);
   --elevation-raised-reverse-background: rgb(255, 255, 255);
   --elevation-raised-reverse-box-shadow: rgb(37, 42, 49);
+  --elevation-level-3-reverse-box-shadow: rgb(37, 42, 49);
   --elevation-overlay-background: rgb(255, 255, 255);
   --elevation-overlay-box-shadow: rgb(37, 42, 49);
+  --elevation-level-4-box-shadow: rgb(37, 42, 49);
   --background-body: rgb(245, 247, 249);
   --box-shadow-action: rgb(37, 42, 49);
   --box-shadow-action-active: rgb(37, 42, 49);
