--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -731,8 +731,11 @@ $elevation-flat-border-color: rgb(232, 237, 241);
 $elevation-flat-border-size: 1px;
 $elevation-action-background: rgb(255, 255, 255);
 $elevation-action-box-shadow: 0 0 2px 0 rgba(37, 42, 49, 0.16), 0 1px 4px 0 rgba(37, 42, 49, 0.12);
+$elevation-level-1-box-shadow: 0 0 2px 0 rgba(37, 42, 49, 0.16), 0 1px 4px 0 rgba(37, 42, 49, 0.12);
 $elevation-action-active-background: rgb(255, 255, 255);
 $elevation-action-active-box-shadow: 0 1px 4px 0 rgba(37, 42, 49, 0.16),
+  0 4px 8px 0 rgba(37, 42, 49, 0.12);
+$elevation-level-2-box-shadow: 0 1px 4px 0 rgba(37, 42, 49, 0.16),
   0 4px 8px 0 rgba(37, 42, 49, 0.12);
 $elevation-fixed-background: rgb(255, 255, 255);
 $elevation-fixed-box-shadow: 0 0 2px 0 rgba(37, 42, 49, 0.16), 0 2px 4px 0 rgba(37, 42, 49, 0.12);
@@ -742,11 +745,17 @@ $elevation-fixed-reverse-box-shadow: 0 0 2px 0 rgba(37, 42, 49, 0.16),
 $elevation-raised-background: rgb(255, 255, 255);
 $elevation-raised-box-shadow: 0 4px 8px 0 rgba(37, 42, 49, 0.16),
   0 8px 24px 0 rgba(37, 42, 49, 0.24);
+$elevation-level-3-box-shadow: 0 4px 8px 0 rgba(37, 42, 49, 0.16),
+  0 8px 24px 0 rgba(37, 42, 49, 0.24);
 $elevation-raised-reverse-background: rgb(255, 255, 255);
 $elevation-raised-reverse-box-shadow: 0 -4px 8px 0 rgba(37, 42, 49, 0.16),
   0 -8px 24px 0 rgba(37, 42, 49, 0.24);
+$elevation-level-3-reverse-box-shadow: 0 -4px 8px 0 rgba(37, 42, 49, 0.16),
+  0 -8px 24px 0 rgba(37, 42, 49, 0.24);
 $elevation-overlay-background: rgb(255, 255, 255);
 $elevation-overlay-box-shadow: 0 12px 24px -4px rgba(37, 42, 49, 0.24),
+  0 8px 60px 0 rgba(37, 42, 49, 0.32);
+$elevation-level-4-box-shadow: 0 12px 24px -4px rgba(37, 42, 49, 0.24),
   0 8px 60px 0 rgba(37, 42, 49, 0.32);
 $background-body: rgb(245, 247, 249);
 $box-shadow-action: 0 0 2px 0 rgba(37, 42, 49, 0.16), 0 1px 4px 0 rgba(37, 42, 49, 0.12);
