--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -704,6 +704,7 @@ $background-illustration: transparent;
 $border-radius-50: 2px;
 $border-radius-100: 4px;
 $border-radius-150: 6px;
+$border-radius-200: 8px;
 $border-radius-300: 12px;
 $border-radius-400: 16px;
 $border-radius-circle: 50%;
