feat(tokens): add space700 and space1300 tokens

--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -853,9 +853,11 @@ $space-300: 12px;
 $space-400: 16px;
 $space-500: 20px;
 $space-600: 24px;
+$space-700: 28px;
 $space-800: 32px;
 $space-1000: 40px;
 $space-1200: 48px;
+$space-1300: 52px;
 $space-1600: 64px;
 $space-x-x-x-small: 2px;
 $space-x-x-small: 4px;
