--- a/packages/orbit-design-tokens/output/tokens.styl
+++ b/packages/orbit-design-tokens/output/tokens.styl
@@ -830,9 +830,11 @@ $space-300= 12;
 $space-400= 16;
 $space-500= 20;
 $space-600= 24;
+$space-700= 28;
 $space-800= 32;
 $space-1000= 40;
 $space-1200= 48;
+$space-1300= 52;
 $space-1600= 64;
 $space-x-x-x-small= 2;
 $space-x-x-small= 4;
