--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -176,6 +176,7 @@ $form-element-error-focus-box-shadow: inset 0 0 0 1px rgba(210, 28, 28, 1),
   inset 0 0 0 3px rgba(210, 28, 28, 0.15);
 $form-element-normal-font-size: 15px;
 $form-element-normal-padding: 0 12px;
+$form-element-large-font-size: 16px;
 $form-element-foreground: rgb(101, 120, 144);
 $form-element-filled-foreground: rgb(37, 42, 49);
 $form-element-label-foreground: rgb(37, 42, 49);
